--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb 3">
-  <a class="navbar-brand" href="#">Bolsa Trabajo</a>
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Bolsa de trabajo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse pt 10" id="navbarNav" >
+  <div class="collapse navbar-collapse mt 10" id="navbarNav" >
     <ul class="navbar-nav ml-auto">
      
       <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista</a>
+        <a class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Nuevo Producto</a>
+        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
       </li>
-      
+      <li class="nav-item">
+        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+      </li>
     </ul>
   </div>
 </nav>
