frontend: create form

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,13 +7,24 @@
     <ul class="navbar-nav ml-auto">
      
       <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
+        <a id="of" class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
       </li>
       <li class="nav-item">
         <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+      </li>
+    </ul>
+  </div>
+  <div class="collapse navbar-collapse mt 10" id="navbarNav" >
+    <ul class="navbar-nav ml-auto">
+     
+      <li class="nav-item">
+        <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
+      </li>
+      <li class="nav-item">
+        <a class="btn btn-outline-danger"  routerLink="/nuevo"><i class="fas fa-circle-user"></i>  Accede como cliente</a>
       </li>
     </ul>
   </div>
