frontend: fix logo

--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -15,7 +15,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let empleo of empleos">
-      <td><img src="{{empleo.logo}}" alt="logo"></td>
+      <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
       <td>{{empleo.titulo}}</td>
       <td>{{empleo.descripcion}}</td>
       <td>{{empleo.empresa}}</td>
