--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,7 +13,10 @@
         <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+        <a class="nav-link"  routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"  routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculim Vitae</a>
       </li>
     </ul>
   </div>
@@ -24,7 +27,7 @@
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-danger"  routerLink="/nuevo"><i class="fas fa-circle-user"></i>  Accede como cliente</a>
+        <a class="btn btn-outline-danger"  routerLink="/"><i class="fas fa-circle-user"></i>  Accede como cliente</a>
       </li>
     </ul>
   </div>
