frontend: create form

--- a/frontend/src/app/empleo/nuevo-empleo.component.html
+++ b/frontend/src/app/empleo/nuevo-empleo.component.html
@@ -3,42 +3,44 @@
         <div class="col-md-4 mx-auto">
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
 
+                <h1>Publica tu oferta</h1>
+
                 <div class="form-group">
-                    <label for="logo">Logo de la empresa(OPCIONAL)</label>
+                    <label for="logo">Logo de la empresa(OPCIONAL)</label><br>
                     <input type="file" class="form-control-file" id="logo" name="logo" (change)="guardarLogo($event)"
                         accept="image/*">
                 </div>
 
                 <div class="form-group">
-                    <label for="titulo">Titulo de la oferta</label>
+                    <label for="titulo">Titulo de la oferta <span>*</span></label>
                     <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="titulo" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcion">Descripcion de la oferta</label>
+                    <label for="descripcion">Descripcion de la oferta <span>*</span></label>
                     <input type="text" class="form-control" id="descripcion" name="descripcion"
                         [(ngModel)]="descripcion" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="empresa">Nombre de la empresa</label>
+                    <label for="empresa">Nombre de la empresa <span>*</span></label>
                     <input type="text" class="form-control" id="empresa" name="empresa" [(ngModel)]="empresa" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="ubicacion">Ubicacion de la empresa</label>
+                    <label for="ubicacion">Ubicacion de la empresa <span>*</span></label>
                     <input type="text" class="form-control" id="ubicacion" name="ubicacion" [(ngModel)]="ubicacion"
                         required>
                 </div>
 
                 <div class="form-group">
-                    <label for="salario">Salario Mensual</label>
+                    <label for="salario">Salario Mensual <span>*</span></label>
                     <input type="number" class="form-control" id="salario" name="salario" [(ngModel)]="salario"
                         required>
                 </div>
 
                 <div class="form-group">
-                    <label for="tipoContrato">Tipo de Contrato</label>
+                    <label for="tipoContrato">Tipo de Contrato <span>*</span></label>
                     <select class="form-control" id="tipoContrato" name="tipoContrato" [(ngModel)]="tipoContrato"
                         required>
                         <option value="Contrato Temporal">Contrato Temporal</option>
@@ -47,7 +49,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="jornada">Jornada laboral</label>
+                    <label for="jornada">Jornada laboral <span>*</span></label>
                     <select class="form-control" id="jornada" name="jornada" [(ngModel)]="jornada" required>
                         <option value="Media Jornada">Media Jornada</option>
                         <option value="Jornada Completa">Jornada Completa</option>
@@ -62,8 +64,9 @@
                 </div>
 
 
-
-                <button class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
+                <div id="boton">
+                    <button class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
+                </div>
             </form>
         </div>
     </div>
