--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,33 +1,34 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Bolsa de trabajo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse mt 10" id="navbarNav" >
+  <div class="collapse navbar-collapse mt 10" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-     
+
       <li class="nav-item">
         <a id="of" class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
+        <a class="nav-link" routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+        <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculim Vitae</a>
+        <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculim Vitae</a>
       </li>
     </ul>
   </div>
-  <div class="collapse navbar-collapse mt 10" id="navbarNav" >
+  <div class="collapse navbar-collapse mt 10" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-     
+
       <li class="nav-item">
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-danger"  routerLink="/"><i class="fas fa-circle-user"></i>  Accede como cliente</a>
+        <a class="btn btn-outline-danger" routerLink="/"><i class="fas fa-circle-user"></i> Accede como cliente</a>
       </li>
     </ul>
   </div>
