frontend: edit form done

--- a/frontend/src/app/empleo/editar-empleo.component.css
+++ b/frontend/src/app/empleo/editar-empleo.component.css
@@ -1,4 +1,28 @@
-#logo{
-    max-width: 5vw;
-    max-height: 5vw;
+.form-group{
+    color: white;
+    width: 70%;
+    margin: 1rem auto;
+}
+.col-md-4{
+    background-color: rgb(44, 44, 44);
+    padding: 1vw;
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 1vw;
+}
+h1{
+    color: white;
+    font-size: 3vw;
+    margin:3rem;
+    text-align: center;
+}
+label{
+    margin-bottom: 0.5rem;
+}
+#boton{
+  display: flex;
+  justify-content: space-evenly;
+}
+span{
+    color: red;
 }
