--- a/frontend/src/app/empleo/nuevo-empleo.component.css
+++ b/frontend/src/app/empleo/nuevo-empleo.component.css
@@ -20,7 +20,8 @@ label{
     margin-bottom: 0.5rem;
 }
 #boton{
-  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
 }
 span{
     color: red;
