backend and frontend crud done

--- a/frontend/src/app/empleo/detalle-empleo.component.css
+++ b/frontend/src/app/empleo/detalle-empleo.component.css
@@ -1,7 +1,17 @@
 *{
     list-style:none;
 }
+
 #logo{
     max-width: 100%;
     max-height: 100%;
+}
+
+.card{
+    padding: 1vw;
+    margin: 3rem auto;
+    border-radius: 1vw;
+}
+.card-header, .card-footer{
+    background-color: rgb(224, 224, 224);
 }
