--- a/frontend/src/app/empleo/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle-empleo.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4 mx-auto">
             <div class="card" style="width: 30rem;">
                 <div class="card-header text-center">
-                    Detalle de la oferta
+                    <h3>Detalle de la oferta</h3>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-grou-item"><img id="logo" src="{{empleo.logo}}" alt="logo">
@@ -19,7 +19,7 @@
                     <li class="list-group-item"><b>Publicada: </b> {{ getTime(empleo.createdAt) }}</li>
 
                 </ul>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <button class="btn btn-outline-primary btn-block" (click)="volver()"><i
                             class="fas fa-arrow-alt-circle-left"></i> Volver</button>
                 </div>
