--- a/frontend/src/app/empleo/editar-empleo.component.html
+++ b/frontend/src/app/empleo/editar-empleo.component.html
@@ -3,6 +3,8 @@
         <div class="col-md-4 mx-auto">
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
 
+                <h1>Actualiza tu oferta</h1>
+
                 <div class="form-group">
                     <label for="logo">Logo de la empresa(OPCIONAL)</label><br>
                     <input type="file" class="form-control-file" id="logo" name="logo"(change)="guardarLogo($event)"
@@ -35,7 +37,7 @@
                 <div class="form-group">
                     <label for="salario">Salario Mensual <span>*</span></label>
                     <input type="number" class="form-control" id="salario" name="salario" [(ngModel)]="empleo.salario"
-                        required>
+                    min=0 required>
                 </div>
 
                 <div class="form-group">
@@ -56,11 +58,11 @@
                 </div>
 
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="idEmpresa">ID EMPRESA (TEMPORAL)</label>
                     <input type="number" class="form-control" id="idEmpresa" name="idEmpresa" [(ngModel)]="empleo.idEmpresa"
                         required>
-                </div>
+                </div> -->
                 <div id="boton">
                     <button class="btn btn-outline-success btn-block">
                         <i class="fas fa-edit"></i>Actualizar</button>
