--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,36 +1,44 @@
-<table id="tablaOfertas" class="table table-dark text-center">
-  <thead>
-    <tr>
-      <th scope="col">Logo empresa</th>
-      <th scope="col">Oferta</th>
-      <!-- <th scope="col">Descripcion</th> -->
-      <th scope="col">Empresa</th>
-      <th scope="col">Ubicacion</th>
-      <!-- <th scope="col">Salario mensual</th> -->
-      <!-- <th scope="col">Tipo de Contrato</th>  -->
-      <th scope="col">Jornada</th>
-      <th scope="col">Oferta publicada</th>
-      <th scope="col" colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container" *ngIf="!listaVacia">
+  <table id="tablaOfertas" class="table table-dark text-center">
+    <thead>
+      <tr>
+        <th scope="col">Logo empresa</th>
+        <th scope="col">Oferta</th>
+        <!-- <th scope="col">Descripcion</th> -->
+        <th scope="col">Empresa</th>
+        <th scope="col">Ubicacion</th>
+        <!-- <th scope="col">Salario mensual</th> -->
+        <!-- <th scope="col">Tipo de Contrato</th>  -->
+        <th scope="col">Jornada</th>
+        <th scope="col">Oferta publicada</th>
+        <th scope="col" colspan="3"></th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <tr *ngFor="let empleo of empleos">
-      <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
-      <td>{{empleo.titulo}}</td>
-      <!-- <td>{{empleo.descripcion}}</td> -->
-      <td>{{empleo.empresa}}</td>
-      <td>{{empleo.ubicacion}}</td>
-      <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
-      <!-- <td>{{empleo.tipoContrato}}</td> -->
-      <td>{{empleo.jornada}}</td>
-      <td>{{ getTime(empleo.createdAt) }}</td>
-      <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
-          Ver</button>
-      <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
-          Editar</button></td>
-      <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-            class="far fa-trash-alt"></i> Eliminar </button></td>
-    </tr>
-  </tbody>
-</table>
+    <tbody>
+      <tr *ngFor="let empleo of empleos">
+        <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
+        <td>{{empleo.titulo}}</td>
+        <!-- <td>{{empleo.descripcion}}</td> -->
+        <td>{{empleo.empresa}}</td>
+        <td>{{empleo.ubicacion}}</td>
+        <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
+        <!-- <td>{{empleo.tipoContrato}}</td> -->
+        <td>{{empleo.jornada}}</td>
+        <td>{{ getTime(empleo.createdAt) }}</td>
+        <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+            Ver</button>
+        <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+            Editar</button></td>
+        <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
+              class="far fa-trash-alt"></i> Eliminar </button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="container" *ngIf="listaVacia">
+  <div class="p-3 mb-2 bg-dark text-white text-center">
+    <h2>La lista esta vacia</h2>
+  </div>
+</div>
