--- a/frontend/src/app/empleo/nuevo-empleo.component.css
+++ b/frontend/src/app/empleo/nuevo-empleo.component.css
@@ -7,7 +7,7 @@
     background-color: rgb(44, 44, 44);
     padding: 1vw;
     width: 80%;
-    margin: 0 auto;
+    margin: 3rem auto;
     border-radius: 1vw;
 }
 h1{
