--- a/frontend/src/app/empleo/nuevo-empleo.component.html
+++ b/frontend/src/app/empleo/nuevo-empleo.component.html
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label for="salario">Salario Mensual <span>*</span></label>
                     <input type="number" class="form-control" id="salario" name="salario" [(ngModel)]="salario"
-                        required>
+                       min=0 required>
                 </div>
 
                 <div class="form-group">
@@ -56,13 +56,13 @@
                     </select>
                 </div>
 
-
+<!-- 
                 <div class="form-group">
                     <label for="idEmpresa">ID EMPRESA (TEMPORAL)</label>
                     <input type="number" class="form-control" id="idEmpresa" name="idEmpresa" [(ngModel)]="idEmpresa"
                         required>
                 </div>
-
+ -->
 
                 <div id="boton">
                     <button class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
