Validation of the creation and update forms

--- a/frontend/src/app/empleo/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle-empleo.component.html
@@ -16,6 +16,8 @@
                     <li class="list-group-item"><b>Salario: </b>{{empleo.salario}}€</li>
                     <li class="list-group-item"><b>Tipo de Contrato: </b>{{empleo.tipoContrato}}</li>
                     <li class="list-group-item"><b>Tipo de Jornada: </b>{{empleo.jornada}}</li>
+                    <li class="list-group-item"><b>Telefono de contacto: </b>{{empleo.telefono}}</li>
+                    <li class="list-group-item"><b>E-mail: </b> {{empleo.email}}</li>
                     <li class="list-group-item"><b>Publicada: </b> {{ getTime(empleo.createdAt) }}</li>
 
                 </ul>
