--- a/frontend/src/app/empleo/nuevo-empleo.component.html
+++ b/frontend/src/app/empleo/nuevo-empleo.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-4 mx-auto">
-            <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+            <form #myForm="ngForm" (ngSubmit)="crear()">
 
                 <h1>Publica tu oferta</h1>
 
@@ -45,6 +45,7 @@
                         required>
                         <option value="Contrato Temporal">Contrato Temporal</option>
                         <option value="Contrato Indefinido">Contrato Indefinido</option>
+                        <option value="Otro tipo de contacto">Otro tipo de contacto</option>
                     </select>
                 </div>
 
@@ -53,16 +54,20 @@
                     <select class="form-control" id="jornada" name="jornada" [(ngModel)]="jornada" required>
                         <option value="Media Jornada">Media Jornada</option>
                         <option value="Jornada Completa">Jornada Completa</option>
+                        <option value="Sin especificar">Sin especificar</option>
                     </select>
                 </div>
 
-<!-- 
                 <div class="form-group">
-                    <label for="idEmpresa">ID EMPRESA (TEMPORAL)</label>
-                    <input type="number" class="form-control" id="idEmpresa" name="idEmpresa" [(ngModel)]="idEmpresa"
-                        required>
+                    <label for="telefono">Telefono de contacto<span>*</span></label>
+                    <input type="number" class="form-control" id="telefono" name="telefono"
+                        [(ngModel)]="telefono" min=0 required>
                 </div>
- -->
+
+                <div class="form-group">
+                    <label for="email">Email de contacto<span>*</span></label>
+                    <input type="text" class="form-control" id="email" name="email" [(ngModel)]="email" required>
+                </div>
 
                 <div id="boton">
                     <button class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
