--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,3 +1,10 @@
+<div class="container" id="buscar">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Encuentra tu trabajo" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> <i class="fa fa-search-plus"
+        aria-hidden="true"></i> Buscar</button>
+  </form>
+</div>
 <div class="container" *ngIf="!listaVacia">
   <table id="tablaOfertas" class="table table-dark text-center">
     <thead>
