--- a/frontend/src/app/empleo/lista-empleo.component.css
+++ b/frontend/src/app/empleo/lista-empleo.component.css
@@ -1,8 +1,16 @@
-#tablaOfertas{
+#tablaOfertas #buscar{
     width: 90%;
     margin: 0 auto;
 }
 #logo{
     max-width: 10vw;
     max-height: 10vw;
+}
+
+
+#buscar>form{
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
+    
 }
