--- a/frontend/src/app/empleo/nuevo-empleo.component.html
+++ b/frontend/src/app/empleo/nuevo-empleo.component.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div id="boton">
-                    <button class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
+                    <button type="submit" class="btn btn-outline-success btn-block"> <i class="far fa-plus-square"></i> Crear</button>
                     <button class="btn btn-outline-primary btn-block" (click)="volver()"><i
                         class="fas fa-arrow-alt-circle-left"></i> Volver</button>
                 </div>
