Job search done

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><h3>R-Jobs</h3></a>
+  <a class="navbar-brand" href="/"><h3>R-Jobs</h3></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,8 +21,8 @@
       </li>
     </ul>
   </div>
-  <div class="collapse navbar-collapse mt 10" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
+  <div class="collapse navbar-collapse" style="margin-right: 20px;" id="navbarNav">
+    <ul class="navbar-nav">
 
       <li class="nav-item">
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
