--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,55 +1,96 @@
-<div class="container" id="buscar">
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Encuentra tu trabajo" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> <i class="fa fa-search-plus"
-        aria-hidden="true"></i> Buscar</button>
-  </form>
-</div>
-<div class="container" *ngIf="!listaVacia">
-  <table id="tablaOfertas" class="table table-dark text-center">
-    <thead>
-      <tr>
-        <th scope="col">Logo empresa</th>
-        <th scope="col">Oferta</th>
-        <!-- <th scope="col">Descripcion</th> -->
-        <th scope="col">Empresa</th>
-        <th scope="col">Ubicacion</th>
-        <!-- <th scope="col">Salario mensual</th> -->
-        <!-- <th scope="col">Tipo de Contrato</th>  -->
-        <th scope="col">Jornada</th>
-        <!-- <th scope="col">Telefono de contacto</th> -->
-        <!-- <th scope="col">Email de contacto</th> -->
-        <th scope="col">Oferta publicada</th>
-        <th scope="col" colspan="3"></th>
-      </tr>
-    </thead>
 
-    <tbody>
-      <tr *ngFor="let empleo of empleos">
-        <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
-        <td>{{empleo.titulo}}</td>
-        <!-- <td>{{empleo.descripcion}}</td> -->
-        <td>{{empleo.empresa}}</td>
-        <td>{{empleo.ubicacion}}</td>
-        <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
-        <!-- <td>{{empleo.tipoContrato}}</td> -->
-        <td>{{empleo.jornada}}</td>
-        <!-- <td>{{empleo.telefono}}</td> -->
-        <!-- <td>{{empleo.email}}</td> -->
-        <td>{{ getTime(empleo.createdAt) }}</td>
-        <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
-            Ver</button>
-        <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+  <div id="buscar" class="input-group">
+    <div id="buscador" class="col">
+      <input type="search" id="idd" class="form-control rounded" placeholder="Buscar...">
+      <button type="submit" class="btn btn-outline-primary" (click)="buscar()"><i class="fas fa-search-plus"></i>
+        Ver</button>
+      <button class="btn btn-outline-danger" (click)="limpiarBusqueda()"><i class="fas fa-search-minus"></i> Limpiar
+        búsqueda</button>
+    </div>
+  </div>
+
+
+  <div class="lista" *ngIf="!listaVacia">
+    <table id="tablaOfertas" class="table table-dark text-center rounded" *ngIf="mostrarTabla">
+      <thead>
+        <tr>
+          <th scope="col">Logo empresa</th>
+          <th scope="col">Oferta</th>
+          <!-- <th scope="col">Descripcion</th> -->
+          <th scope="col">Empresa</th>
+          <th scope="col">Ubicacion</th>
+          <!-- <th scope="col">Salario mensual</th> -->
+          <!-- <th scope="col">Tipo de Contrato</th>  -->
+          <th scope="col">Jornada</th>
+          <!-- <th scope="col">Telefono de contacto</th> -->
+          <!-- <th scope="col">Email de contacto</th> -->
+          <th scope="col">Oferta publicada</th>
+          <th scope="col" colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let empleo of empleos">
+          <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
+          <td>{{empleo.titulo}}</td>
+          <!-- <td>{{empleo.descripcion}}</td> -->
+          <td>{{empleo.empresa}}</td>
+          <td>{{empleo.ubicacion}}</td>
+          <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
+          <!-- <td>{{empleo.tipoContrato}}</td> -->
+          <td>{{empleo.jornada}}</td>
+          <!-- <td>{{empleo.telefono}}</td> -->
+          <!-- <td>{{empleo.email}}</td> -->
+          <td>{{ getTime(empleo.createdAt) }}</td>
+          <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+              Ver</button>
+            <!-- <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
             Editar</button></td>
         <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-              class="far fa-trash-alt"></i> Eliminar </button></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<div class="container" *ngIf="listaVacia">
-  <div class="p-3 mb-2 bg-dark text-white text-center">
-    <h2>La lista esta vacia</h2>
+              class="far fa-trash-alt"></i> Eliminar </button></td> -->
+        </tr>
+      </tbody>
+    </table>
   </div>
-</div>
+
+
+  <div class="container" *ngIf="listaVacia">
+    <div class="p-3 mb-2 bg-dark text-white text-center">
+      <h2>La lista esta vacia</h2>
+    </div>
+  </div>
+
+
+  <div class="lista" *ngIf="empleosFiltrados?.length ?? 0 > 0">
+    <table id="tablaBusqueda" class="table table-dark text-center rounded">
+      <thead>
+        <tr>
+          <th scope="col">Logo empresa</th>
+          <th scope="col">Oferta</th>
+          <th scope="col">Empresa</th>
+          <th scope="col">Ubicacion</th>
+          <th scope="col">Jornada</th>
+          <th scope="col">Oferta publicada</th>
+          <th scope="col" colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let empleo of empleosFiltrados">
+          <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
+          <td>{{empleo.titulo}}</td>
+          <td>{{empleo.empresa}}</td>
+          <td>{{empleo.ubicacion}}</td>
+          <td>{{empleo.jornada}}</td>
+          <td>{{ getTime(empleo.createdAt) }}</td>
+          <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+              Ver</button>
+          </td>
+          <!-- <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+            Editar</button></td>
+        <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
+              class="far fa-trash-alt"></i> Eliminar </button></td> -->
+        </tr>
+      </tbody>
+    </table>
+  </div>
