--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -28,7 +28,7 @@
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-danger" routerLink="/"><i class="fas fa-circle-user"></i> Accede como cliente</a>
+        <a class="btn btn-outline-danger" routerLink="/"><i class="fas fa-circle-user"></i> Accede como candidato</a>
       </li>
     </ul>
   </div>
