--- a/frontend/src/app/empleo/editar-empleo.component.html
+++ b/frontend/src/app/empleo/editar-empleo.component.html
@@ -48,7 +48,7 @@
                         required>
                         <option value="Contrato Temporal">Contrato Temporal</option>
                         <option value="Contrato Indefinido">Contrato Indefinido</option>
-                        <option value="Otro tipo de contacto">Otro tipo de contacto</option>
+                        <option value="Otro tipo de contacto">Otro tipo de contrato</option>
                     </select>
                 </div>
 
